[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Scripts/Journal.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Main_menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Items/pxArt.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/Ghastly Panic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Items/button_journal_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/Items/button_journal_icon_flip.png" type="Texture" id=6]
[ext_resource path="res://assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Items/journal_image_menu.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Theme" id=6]
default_font = ExtResource( 2 )
Button/styles/focus = SubResource( 7 )

[node name="Journal" type="Control" groups=["Journal"]]
visible = false
light_mask = 0
margin_left = 30.0
margin_top = 35.0
margin_right = 1054.0
margin_bottom = 635.0
script = ExtResource( 1 )

[node name="Journal_sfx" type="AudioStreamPlayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -600.0
margin_right = 374.0
margin_bottom = 297.0
rect_scale = Vector2( 0.7, 0.6 )
texture = ExtResource( 3 )

[node name="Previous_page" type="Button" parent="."]
anchor_left = 0.048
anchor_top = 0.72
anchor_right = 0.099
anchor_bottom = 0.796
margin_left = -0.152
margin_top = -3.05176e-05
margin_right = 794.624
margin_bottom = 701.4
rect_scale = Vector2( 0.0612446, 0.0612446 )
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="Next_page" type="Button" parent="."]
anchor_left = 0.848
anchor_top = 0.728
anchor_right = 0.898
anchor_bottom = 0.805
margin_left = -0.352051
margin_top = 0.199982
margin_right = 795.448
margin_bottom = 701.0
rect_rotation = 0.0332334
rect_scale = Vector2( 0.0612446, 0.0612446 )
custom_fonts/font = SubResource( 2 )
icon = ExtResource( 6 )
flat = true

[node name="Evidence_and_Monsters" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Evidence_and_Monsters"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 173.0
margin_top = 37.0
margin_right = 468.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 2 )
meta_underlined = false
tab_size = 2
text = " 
Evidence "
fit_content_height = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Evidence_and_Monsters"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 575.0
margin_top = 40.0
margin_right = 958.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 2 )
meta_underlined = false
tab_size = 2
text = " 
Monster is a..."
fit_content_height = true
scroll_active = false

[node name="Monster_grid" type="GridContainer" parent="Evidence_and_Monsters"]
margin_left = 518.0
margin_top = 140.0
margin_right = 897.0
margin_bottom = 456.0
custom_constants/vseparation = 15
custom_constants/hseparation = 25
columns = 3

[node name="Evidence_grid" type="GridContainer" parent="Evidence_and_Monsters"]
margin_left = 78.0
margin_top = 136.0
margin_right = 458.0
margin_bottom = 423.0
custom_constants/vseparation = 20
custom_constants/hseparation = 30
columns = 2

[node name="Youshouldrun" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Youshouldrun"]
modulate = Color( 0.564706, 0.0509804, 0.0509804, 1 )
light_mask = 0
anchor_left = 0.5
anchor_right = 0.5
margin_left = 108.0
margin_top = -120.0
margin_right = 276.0
margin_bottom = -15.0
rect_rotation = 16.6332
rect_scale = Vector2( 5.15987, 4.96017 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
tab_size = 2
text = " 
   YOU SHOULD RUN"
fit_content_height = true
scroll_active = false

[node name="Monster_info" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Monster_info"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 105.0
margin_top = 37.0
margin_right = 468.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 2 )
meta_underlined = false
tab_size = 2
text = " 
Known monsters"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Monster_info"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 297.0
margin_top = 96.0
margin_right = 660.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = SubResource( 4 )
meta_underlined = false
tab_size = 2
text = " 
(so far...)"
fit_content_height = true
scroll_active = false

[node name="M_desc" type="RichTextLabel" parent="Monster_info"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 507.0
margin_top = 121.0
margin_right = 909.0
margin_bottom = 423.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = SubResource( 4 )
meta_underlined = false
tab_size = 2
text = " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere felis molestie orci aliquam tincidunt. Cras volutpat elit quis vulputate lacinia. Sed hendrerit metus ac orci aliquam, sed aliquam ante viverra. Mauris enim magna, tincidunt a maximus sit amet, dictum sit amet risus. Ut sit amet lectus dui. Etiam tempor sit amet nisl vitae vehicula. Curabitur ac metus ac risus dignissim dictum. Morbi non dapibus dui, ac eleifend lorem. Aliquam at mi.

"
fit_content_height = true
scroll_active = false

[node name="M_name" type="RichTextLabel" parent="Monster_info"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.324
anchor_right = 0.5
anchor_bottom = 0.324
margin_left = 500.0
margin_top = 77.0
margin_right = 989.0
margin_bottom = 118.0
rect_scale = Vector2( 0.852904, 1.03133 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]VAMPIRE[/center]"
meta_underlined = false
tab_size = 2
text = "VAMPIRE"
fit_content_height = true
scroll_active = false

[node name="Monster_grid" type="GridContainer" parent="Monster_info"]
margin_left = 73.0
margin_top = 163.0
margin_right = 452.0
margin_bottom = 479.0
rect_scale = Vector2( 1.02614, 0.87235 )
custom_constants/vseparation = 15
custom_constants/hseparation = 25
columns = 3

[node name="Menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 50.0
margin_top = 75.0
margin_right = 474.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.69
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] Alive yet? [/center]
"
meta_underlined = false
tab_size = 2
text = " Alive yet? 
"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.234
anchor_top = 0.478
anchor_right = 0.766
anchor_bottom = 0.88
margin_left = 171.0
margin_top = 190.0
margin_right = 362.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
custom_constants/separation = 15
alignment = 1

[node name="Continue" type="Button" parent="Menu/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 191.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Continue"
flat = true

[node name="Restart" type="Button" parent="Menu/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 65.0
margin_right = 191.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Restart"
flat = true

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 130.0
margin_right = 191.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 50 )
text = "Options"
flat = true

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 195.0
margin_right = 191.0
margin_bottom = 245.0
rect_min_size = Vector2( 0, 50 )
text = "Exit"
flat = true

[node name="JournalImageMenu" type="Sprite" parent="Menu"]
position = Vector2( 698, 249 )
scale = Vector2( 0.641508, 0.564405 )
texture = ExtResource( 8 )

[connection signal="pressed" from="Previous_page" to="." method="_on_Previous_page_pressed"]
[connection signal="pressed" from="Next_page" to="." method="_on_Next_page_pressed"]
[connection signal="visibility_changed" from="Menu" to="." method="_on_Menu_visibility_changed"]
[connection signal="pressed" from="Menu/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
